--- a/kvm/roles/kvm_pool/templates/pool.xml.j2
+++ b/kvm/roles/kvm_pool/templates/pool.xml.j2
@@ -1,6 +1,6 @@
 <pool type='dir'>
-  <name>{{ pool.name }}</name>
+  <name>{{ virt_pool_name }}</name>
   <target>
-    <path>{{ pool.path }}</path>
+    <path>{{ virt_pool_path }}</path>
   </target>
 </pool> 
